--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -1,25 +1,22 @@
-<h1>Create a New Owner</h1>
- 
+<h1>Create New Owner</h1>
+
 <form action="/owners" method="POST">
-  <label>Owner Name:</label>
-  <br>
+  <label>Owner's Name:</label>
+
+
   <input type="text" name="owner[name]">
- 
-  <br>
-  <p>Select an existing pet or create a new one below.</p>
- 
- 
-  <h3>Existing Pets</h3>
+
+  <label>Choose an existing pet:</label>
+
   <% @pets.each do |pet| %>
-    <input type="checkbox" name="owner[pet_ids][]" id="<%= pet.id %>" value="<%= pet.id %>"><%= pet.name %></input><br>
+    <input type="checkbox" name="owner[pet_ids][]" value="<%=pet.id%>" id="<%=pet.id%>">
+    <%=pet.name%>
+    </input>
   <% end %>
-  <br>
- 
-  <h3>New Pet</h3>
-  <label>Pet Name: </label>
-  <br>
-  <input type="text" name="pet[name]" id="pet_name"></input>
-  <br><br>
- 
+
+  <label>Create New Pet:</label>
+
+  <label>Pet's Name:</label>
+    <input type="text" name="pet[name]"></input>
   <input type="submit" value="Create Owner">
 </form>
