--- a/app/views/owners/show.erb
+++ b/app/views/owners/show.erb
@@ -1,7 +1,5 @@
 <h1><%=@owner.name%></h1>
-<h4>Pets:</h4>
-<ul>
+Pets:
   <%@owner.pets.each do |pet|%>
-  <li><%=pet.name%></li>
+  <%=pet.name%>
   <%end%>
-</ul>
