--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,29 +1,21 @@
 <h1>Update Pet</h1>
 
-<h2>Edits for <%= @pet.name %></h2>
- 
-  <form action="/pets/<%= @pet.id %>" method="POST">
-    <input id="hidden" type="hidden" name="_method" value="patch">
-    <label>Edit the pet's Name:</label>
-    <br>
-    <input type="text" name="pet[name]" value="<%= @pet.name %>">
- 
-    <br>
-    <p>Select an existing pet or create a new one below.</p>
- 
- 
-    <h3>Existing Owner</h3>
-    <% @Owner.all.each do |owner| %>
-      <input type="radio" name="pet[owner_id][]" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if @pet.owner == owner %>><%= owner.name %></input><br>
-    <% end %>
-    <br>
- 
-    <h3>New Owner</h3>
-    <label>Owner Name: </label>
-    <br>
-    <input type="text" name="owner[name]" id="owner_name"></input>
-    <br><br>
- 
-    <input type="submit" value="Update Pet">
-  </form>
+<form action="/pets/<%=@pet.id%>" method="POST">
+  <label>Pet's Name:</label>
 
+  <input type="text" name="pet[name]" id="pet_name" value="<%=@pet.name%>">
+
+  <label>Choose Existing owner:</label>
+
+  <% Owner.all.each do |owner| %>
+    <input type="radio" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>" <%='checked' if @pet.owner == owner %>>
+    <%=owner.name%>
+    </input>
+  <% end %>
+
+  <label>Create New Owner:</label>
+  <label>Owner Name:</label>
+    <input type="text" name="owner[name]" id="owner_name"></input>
+
+  <input type="submit" value="Update Pet">
+</form>
