--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,24 +1,23 @@
-<h1>Create a new Pet</h1>
+<h1>Create Pet</h1>
+
 <form action="/pets" method="POST">
   <label>Pet's Name:</label>
-  <br>
-  <input type="text" name="pet[name]">
+
+  <input type="text" name="pet[name]" id="pet_name">
+
+  <label>Choose Existing Owner:</label>
  
-  <br>
-  <p>Select an existing Owner or create a new one below.</p>
- 
- 
-  <h3>Existing Owner</h3>
   <% @owners.each do |owner| %>
-    <input type="checkbox" name="owner[owner_ids][]" id="<%= owner.id %>" value="<%= owner.id %>"><%= owner.name %></input><br>
+    <input type="checkbox" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>">
+    <%=owner.name%>
+    </input>
   <% end %>
-  <br>
- 
-  <h3>New Owner</h3>
-  <label>Owner Name: </label>
-  <br>
-  <input type="text" name="owner[name]" id="owner_name"></input>
-  <br><br>
- 
+
+  <label>Create New Owner:</label>
+
+  <label>Name:</label>
+    <input type="text" name="owner[name]" id="owner_name"></input>
+
+
   <input type="submit" value="Create Pet">
 </form>
